# nia

./: .gitignore  README.md  T.py  all_log_data.json  log_data.txt  package-lock.json  pyproject.toml  serverless.yml
frontend/: .env.production  .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: url.ts
frontend/src/components/: Loadable.tsx  Table.tsx
frontend/src/components/CustomInput/: index.tsx
frontend/src/components/CustomInput/form/: RadioInput.tsx  TextInput.tsx  index.ts
frontend/src/constants/: api.ts  aws.ts  cookie.ts  faq.ts  form.ts  query.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/lib/: Axios.ts  Cookie.ts  Day.ts  Login.ts  Query.ts
frontend/src/pages/Home/: Description.tsx  FAQ.tsx  Form.tsx  MyURLs.tsx  ShortURL.tsx  index.tsx
frontend/src/pages/Login/: index.tsx
frontend/src/pages/Logout/: index.tsx
frontend/src/pages/Token/: index.tsx
frontend/src/pages/Urls/: index.tsx
frontend/src/shared/: Providers.tsx  Router.tsx
frontend/src/types/: axios.ts  url.ts
lambdas/get_all_urls/: __init__.py
lambdas/post_url/: __init__.py
lambdas/redirect_url/: __init__.py  index.html
lambdas/update_statistics/: __init__.py
scripts/: lint.sh  lint_check.sh
shared/: __init__.py  cognito.py  middleware.py
